@@ -2,6 +2,7 @@
 utilfunsdir = $(top_srcdir)/src/utilfuns
 libsword_la_SOURCES += $(utilfunsdir)/Greek2Greek.cpp
 libsword_la_SOURCES += $(utilfunsdir)/utilstr.cpp
+libsword_la_SOURCES += $(utilfunsdir)/utilxml.cpp
 libsword_la_SOURCES += $(utilfunsdir)/unixstr.cpp
 libsword_la_SOURCES += $(utilfunsdir)/swunicod.cpp
 libsword_la_SOURCES += $(utilfunsdir)/swversion.cpp
